<resources>
    <string name="app_name">RecyclingApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="action_logout">로그아웃</string>
    <string name="action_exit">앱 종료하기</string>
    <string name="action_image_report">검색결과 오류신고</string>

    <string name="menu_home">Home</string>
    <string name="menu_camera">Camera</string>
    <string name="menu_report">Report</string>
    <string name="menu_faq">FAQ</string>
    <string name="menu_search">Search</string>
    <string name="menu_camera_home">Camera Home</string>
    <string name="menu_camera_result">Camera Result</string>
    <string name="menu_camera_report">Camera Report</string>
    <string name="menu_camera_list">Camera List</string>
    <string name="menu_report_home">Report Home</string>
    <string name="menu_faq_home">FAQ Home</string>
    <string name="menu_faq_answer">FAQ Answer</string>
    <string name="menu_search_home">Search Home</string>

    <string name="mon">월요일</string>
    <string name="tue">화요일</string>
    <string name="wed">수요일</string>
    <string name="thu">목요일</string>
    <string name="fri">금요일</string>
    <string name="sat">토요일</string>
    <string name="sun">일요일</string>

    <string name="client_id">25057406424-ch45tjcqq3d3odg9640s9p53qak1n451.apps.googleusercontent.com</string>

    <string name="input_nickname_guide">[어플명] 에서 사용할\n닉네임을 입력해주세요.</string>
    <string name="input_zone_guide">거주하고 있는\n지역구를 선택해주세요.</string>
    <string name="input_day_guide">재활용 쓰레기를\n버리는 요일을 선택해주세요.</string>
    <string name="finish_guide">가입이 완료되었습니다!</string>

    <string name="menu1_title">검색</string>
    <string name="menu2_title">환경리포트</string>
    <string name="menu3_title">FAQ</string>
    <string name="menu4_title">찾기</string>

    <string name="menu1_sub_title">헷갈리는 분리수거 방법\n사진찍어서 찾아봐요!</string>
    <string name="menu2_sub_title">이번주 나의\n녹색생활 실천현황은?</string>
    <string name="menu3_sub_title">자주 묻는 질문들을\n확인해보세요!</string>
    <string name="menu4_sub_title">내 주변 탄소중립포인트\n사용처를 확인해보세요!</string>

    <string name="camera_photograph">사진 찍어서 찾기</string>
    <string name="camera_searchList">이전 검색 목록에서 보기</string>

    <string name="camera_list_title">이전 검색 List</string>
    <string name="camera_list_delete"><u>검색기록 전체 삭제</u></string>

    <string name="camera_report_submit">결과 전송하기</string>

    <string name="separate_guide">지역마다 수거 방법이나 분리배출 규정이 조금씩 다를 수 있으니, 자치단체나 재활용 가이드라인에 따라 정확한 방법을 따르는 것이 좋습니다</string>

    <string name="search_guide">내 주변 탄소 중립 포인트 사용처</string>
    <string name="search_category_all">전체</string>
    <string name="search_category_receipt">전자 영수증</string>
    <string name="search_category_tumbler">텀블러·다회용컵</string>
    <string name="search_category_eco_item">친환경 상품</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>