<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_camera" />
        <item
            android:id="@+id/nav_report"
            android:icon="@drawable/ic_content_paste"
            android:title="@string/menu_report" />
        <item
            android:id="@+id/nav_Faq"
            android:icon="@drawable/ic_question_answer"
            android:title="@string/menu_faq" />
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/ic_menu_explore"
            android:title="@string/menu_search" />
    </group>
</menu>