<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <!--Home-->
    <fragment
        android:id="@+id/nav_home"
        android:name="com.loveprofessor.recyclingapp.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">

        <!--Home -> Camera로 이동-->
        <action android:id="@+id/action_home_to_camera"
                app:destination="@+id/nav_camera" />
    </fragment>

    <!--Camera 촬영-->
    <fragment
        android:id="@+id/nav_camera"
        android:name="com.loveprofessor.recyclingapp.CameraFragment"
        android:label="@string/menu_camera"
        tools:layout="@layout/fragment_camera">

        <!--Camera -> Camera_home 으로 이동-->
        <action android:id="@+id/action_camera_to_camera_home"
                app:destination="@+id/nav_camera_home"/>
    </fragment>

    <!--찾기-->
    <fragment
        android:id="@+id/nav_camera_home"
        android:name="com.loveprofessor.recyclingapp.CameraHomeFragment"
        android:label="@string/menu_camera_home"
        tools:layout="@layout/fragment_camera_home">

        <!--Camera_Home -> Camera_Result 으로 이동-->
        <action android:id="@+id/action_camera_home_to_camera_result"
                app:destination="@+id/nav_camera_result"/>

        <!--Camera_Home -> Camera_List 으로 이동-->
        <action android:id="@+id/action_camera_home_to_camera_list"
            app:destination="@+id/nav_camera_list"/>
    </fragment>

    <!--Camera 결과화면-->
    <fragment
        android:id="@+id/nav_camera_result"
        android:name="com.loveprofessor.recyclingapp.CameraResultFragment"
        android:label="@string/menu_camera_result"
        tools:layout="@layout/fragment_camera_result" />

    <!--Camera 결과 목록 화면-->
    <fragment
        android:id="@+id/nav_camera_list"
        android:name="com.loveprofessor.recyclingapp.CameraListFragment"
        android:label="@string/menu_camera_list"
        tools:layout="@layout/fragment_camera_list" />

    <!--환경 리포트-->
    <fragment
        android:id="@+id/nav_report"
        android:name="com.loveprofessor.recyclingapp.ReportFragment"
        android:label="@string/menu_report"
        tools:layout="@layout/fragment_report" />

    <!--FAQ-->
    <fragment
        android:id="@+id/nav_Faq"
        android:name="com.loveprofessor.recyclingapp.FaqFragment"
        android:label="@string/menu_faq"
        tools:layout="@layout/fragment_faq" />

    <!--찾기-->
    <fragment
        android:id="@+id/nav_search"
        android:name="com.loveprofessor.recyclingapp.SearchFragment"
        android:label="@string/menu_search"
        tools:layout="@layout/fragment_search" />
</navigation>