<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <TextView
        android:id="@+id/textViewIntro"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/text_view_border"
        android:padding="20dp"
        android:text="닉네임님\n금요일은 재활용쓰레기\n버리는 날이에요!"
        android:textSize="23dp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.211"
        app:layout_constraintWidth_percent="0.85" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="300dp"
        android:orientation="vertical"
        app:layout_constraintWidth_percent="0.85"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewIntro"
        app:layout_constraintVertical_bias="0.12">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <!--검색-->
            <androidx.cardview.widget.CardView
                android:id="@+id/item_card1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginRight="10dp"
                android:text="Button" >

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <!--메뉴 이름-->
                    <TextView
                        android:id="@+id/textViewTitle1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/menu1_title"
                        android:textColor="@color/black"
                        android:textSize="25sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.1"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.100000024" />

                    <!--메뉴 설명-->
                    <TextView
                        android:id="@+id/textViewSubTitle1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/menu1_sub_title"
                        android:textSize="15sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.48"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textViewTitle1"
                        app:layout_constraintVertical_bias="0.101" />

                    <!--메뉴 아이콘-->
                    <ImageView
                        android:id="@+id/menu_icon1"
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:src="@drawable/ic_menu_camera"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.92"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textViewSubTitle1" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <!--환경리포트-->
            <androidx.cardview.widget.CardView
                android:id="@+id/item_card2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="Button">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <!--메뉴 이름-->

                    <!--메뉴 아이콘-->

                    <TextView
                        android:id="@+id/textViewTitle2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/menu2_title"
                        android:textColor="@color/black"
                        android:textSize="25sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.25"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.141" />

                    <TextView
                        android:id="@+id/textViewSubTitle2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/menu2_sub_title"
                        android:textSize="15sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.42"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textViewTitle2"
                        app:layout_constraintVertical_bias="0.101" />

                    <ImageView
                        android:id="@+id/menu_icon2"
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:src="@drawable/ic_menu_camera"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.92"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textViewSubTitle2" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <!--2번째 줄-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <!--FAQ-->
            <androidx.cardview.widget.CardView
                android:id="@+id/item_card3"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginRight="10dp"
                android:text="Button" >

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <!--메뉴 이름-->
                    <TextView
                        android:id="@+id/textViewTitle3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/menu3_title"
                        android:textColor="@color/black"
                        android:textSize="25sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.1"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.100000024" />

                    <!--메뉴 설명-->
                    <TextView
                        android:id="@+id/textViewSubTitle3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/menu3_sub_title"
                        android:textSize="15sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.226"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textViewTitle3"
                        app:layout_constraintVertical_bias="0.145" />

                    <!--메뉴 아이콘-->
                    <ImageView
                        android:id="@+id/menu_icon3"
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:src="@drawable/ic_menu_camera"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.92"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textViewSubTitle3" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <!--찾기-->
            <androidx.cardview.widget.CardView
                android:id="@+id/item_card4"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="Button">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <!--메뉴 이름-->

                    <!--메뉴 아이콘-->

                    <TextView
                        android:id="@+id/textViewTitle4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/menu4_title"
                        android:textColor="@color/black"
                        android:textSize="25sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.1"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.1" />

                    <TextView
                        android:id="@+id/textViewSubTitle4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/menu4_sub_title"
                        android:textSize="15sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.48"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textViewTitle4"
                        app:layout_constraintVertical_bias="0.101" />

                    <ImageView
                        android:id="@+id/menu_icon4"
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:src="@drawable/ic_menu_camera"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.92"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textViewSubTitle4" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>