<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".search.SearchHomeFragment">

    <TextView
        android:id="@+id/textViewSearchHomeGuide"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/search_guide"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:textSize="23sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--클릭시 탄중포 홈페이지 연결-->
    <TextView
        android:id="@+id/point_explain_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="탄소중립포인트란?"
        android:textColor="#458948"
        android:textStyle="bold"
        android:autoLink="web"
        app:layout_constraintBottom_toTopOf="@+id/linearLayoutCategory"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.066"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewSearchHomeGuide"
        app:layout_constraintVertical_bias="0.2" />

    <LinearLayout
        android:id="@+id/linearLayoutCategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewSearchHomeGuide">

        <!--전체-->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <!--버튼 이미지-->
            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:cardCornerRadius="40dp"
                app:cardElevation="4dp">

                <ImageButton
                    android:id="@+id/imageButtonAll"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_gravity="center"
                    android:background="@android:color/transparent"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:src="@drawable/ic_all" />
            </androidx.cardview.widget.CardView>

            <!--텍스트 뷰-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/search_category_all"
                android:textColor="#393939"
                android:textSize="13sp" />
        </LinearLayout>

        <!--전자 영수증-->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <!--버튼 이미지-->
            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:cardCornerRadius="40dp"
                app:cardElevation="4dp">

                <ImageButton
                    android:id="@+id/imageButtonReceipt"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_gravity="center"
                    android:background="@android:color/transparent"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:src="@drawable/ic_receipt" />
            </androidx.cardview.widget.CardView>

            <!--텍스트 뷰-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/search_category_receipt"
                android:textColor="#393939"
                android:textSize="13sp" />
        </LinearLayout>

        <!--텀블러, 다회용컵-->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <!--버튼 이미지-->
            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:cardCornerRadius="40dp"
                app:cardElevation="4dp">

                <ImageButton
                    android:id="@+id/imageButtonTumbler"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_gravity="center"
                    android:background="@android:color/transparent"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:src="@drawable/ic_cup" />
            </androidx.cardview.widget.CardView>

            <!--텍스트 뷰-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/search_category_tumbler"
                android:textColor="#393939"
                android:textSize="13sp" />
        </LinearLayout>

        <!--다회용기-->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <!--친환경상품-->
            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:cardCornerRadius="40dp"
                app:cardElevation="4dp">

                <ImageButton
                    android:id="@+id/imageButtonEcoItems"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_gravity="center"
                    android:background="@android:color/transparent"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:src="@drawable/ic_eco_bottle" />
            </androidx.cardview.widget.CardView>

            <!--텍스트 뷰-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/search_category_eco_item"
                android:textColor="#393939"
                android:textSize="13sp" />
        </LinearLayout>
    </LinearLayout>
    
    <FrameLayout
        android:id="@+id/map_container"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/linearLayoutCategory"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <com.kakao.vectormap.MapView
            android:id="@+id/map_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayoutCategory" />
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>